--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -9,7 +9,7 @@
 // USER VARIABLES SECTION
 
 $accent:     orange; // Accent Color
-$text:  #333; // Text Color
+$textcolor: #333; // Text Color
 $mainfamily: roboto, sans-serif; // Main Font Family
 $fontsize: 16px;
 
