--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,3 +1,143 @@
 @import "config";
 
-// CUSTOM USER STYLES & IMPORTSont-weight: 900;
+
+// ? Main BLOCK
+.main {
+	background: url(../images/dest/main-bg.jpg) center no-repeat;
+	background-size: cover;
+	padding-top: 165px;
+	padding-bottom: 200px;
+	overflow: hidden;
+	&__content {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+}
+.description {
+
+	&__title {
+		color: $accent;
+		font-size: 56px;
+		font-weight: 900;
+		line-height: 1.2;
+		&::after {
+			content: '';
+			display: block;
+			width: 115px;
+			height: 5px;
+			background-color: #ffffff;
+			margin-top: 30px;
+		}
+	}
+
+	&__subtitle {
+		font-weight: 900;
+		font-size: 36px;
+		margin-top: 30px;
+		line-height: 1;
+	}
+}
+.included {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 60px;
+	&__list {
+		list-style: none;
+		padding: 0;
+		margin: 0;
+	}
+	&__item {
+		display: flex;
+		align-items: center;
+		&::before {
+			content: '';
+			display: block;
+			background: url(../images/dest/plus.png) center no-repeat;
+			width: 48px;
+			height: 48px;
+			margin-right: 10px;
+		}
+	}
+}
+.play {
+	position: relative;
+	cursor: pointer;
+	&__wrapp {
+		position: relative;
+		width: 193px;
+		height: 193px;
+	}
+	&__pulse {
+		width: 193px;
+		height: 193px;
+		border: 1px solid $accent;
+		animation: border-pulse 3s infinite;
+		border-radius: 50%;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+	&__btn {
+		display: block;
+		width: 193px;
+		height: 193px;
+		background: url(../images/dest/play.png) center no-repeat;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+	&__author {
+		position: absolute;
+		top: -120px;
+		left: -350px;
+		// // width: 100%;
+		// img {
+		// 	width: 95%;
+		// }
+	}
+}
+
+.btn {
+	display: block;
+	font-weight: 900;
+	color: #000000;
+	width: 270px;
+	padding: 25px 0;
+	background-color: $accent;
+	border-radius: 32.5px;
+	line-height: 1;
+	text-align: center;
+	text-transform: uppercase;
+	position: relative;
+	box-shadow: 0px 0px 9.75px 3.25px rgba(255, 197, 0, 0.65);
+	margin-top: 60px;
+	&:hover {
+		text-decoration: none;
+		color: #000;
+	}
+	&::after {
+		content: '';
+		display: block;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		box-shadow: 0px 3px 0px #ff9600;
+		border-radius: 32.5px;
+		top: 0;
+		left: 0;
+	}
+}
+
+@keyframes border-pulse {
+	0% {
+	transform: scale(1);
+	opacity: .3;
+	
+	}
+	100% {
+		transform: scale(2);
+		opacity: 0;
+	}
+}
+
