--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,7 +1,8 @@
 @import "config";
 
-
 // ? Main BLOCK
+@media (max-width: 1200px) {
+}
 .main {
 	background: url(../images/dest/main-bg.jpg) center no-repeat;
 	background-size: cover;
@@ -15,14 +16,13 @@
 	}
 }
 .description {
-
 	&__title {
 		color: $accent;
 		font-size: 56px;
 		font-weight: 900;
 		line-height: 1.2;
 		&::after {
-			content: '';
+			content: "";
 			display: block;
 			width: 115px;
 			height: 5px;
@@ -51,7 +51,7 @@
 		display: flex;
 		align-items: center;
 		&::before {
-			content: '';
+			content: "";
 			display: block;
 			background: url(../images/dest/plus.png) center no-repeat;
 			width: 48px;
@@ -91,10 +91,24 @@
 		position: absolute;
 		top: -120px;
 		left: -350px;
-		// // width: 100%;
-		// img {
-		// 	width: 95%;
-		// }
+	}
+	&__text {
+		font-size: 14px;
+		line-height: 1.3;
+		position: absolute;
+		top: -48px;
+		left: 35px;
+		&::before {
+			content: "";
+			display: block;
+			background: url(../images/dest/line.png) center no-repeat;
+			background-size: cover;
+			width: 19px;
+			height: 84px;
+			position: absolute;
+			top: 30px;
+			left: -30px;
+		}
 	}
 }
 
@@ -111,13 +125,15 @@
 	text-transform: uppercase;
 	position: relative;
 	box-shadow: 0px 0px 9.75px 3.25px rgba(255, 197, 0, 0.65);
-	margin-top: 60px;
+	&--top {
+		margin-top: 60px;
+	}
 	&:hover {
 		text-decoration: none;
 		color: #000;
 	}
 	&::after {
-		content: '';
+		content: "";
 		display: block;
 		position: absolute;
 		width: 100%;
@@ -127,13 +143,19 @@
 		top: 0;
 		left: 0;
 	}
+	&:active {
+		transform: translateY(2px);
+		box-shadow: 0px 0px 9.75px 1.25px rgba(255, 197, 0, 0.65);
+		&::after {
+			box-shadow: 0px 2px 0px #ff9600;
+		}
+	}
 }
 
 @keyframes border-pulse {
 	0% {
-	transform: scale(1);
-	opacity: .3;
-	
+		transform: scale(1);
+		opacity: 0.3;
 	}
 	100% {
 		transform: scale(2);
@@ -141,3 +163,97 @@
 	}
 }
 
+@media (max-width: 1200px) {
+	.main {
+		padding-top: 150px;
+		padding-bottom: 150px;
+		&__content {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+		}
+		.included {
+			flex-direction: column;
+		}
+	}
+}
+
+@media (max-width: 992px) {
+	.main {
+		padding-bottom: 750px;
+		padding-top: 80px;
+	}
+	.play {
+		position: relative;
+		&__wrapp {
+			position: absolute;
+			left: 400px;
+			top: 270px;
+		}
+		&__author {
+			z-index: 1;
+			top: 170px;
+			left: 90px;
+		}
+	}
+	.btn--top {
+		margin-top: 20px;
+	}
+}
+@media (max-width: 576px) {
+	.main {
+		background: url(../images/dest/main-bg-m.jpg) center no-repeat;
+		background-size: cover;
+		padding-bottom: 435px;
+	}
+	.description {
+		&__title {
+			font-size: 36px;
+			&::after {
+				width: 90px;
+			}
+		}
+		&__subtitle {
+			font-size: 24px;
+			margin-top: 25px;
+		}
+		.included {
+			margin-top: 30px;
+		}
+	}
+	.play {
+		&__wrapp {
+			left: 170px;
+			top: 230px;
+			width: 100px;
+			height: 100px;
+		}
+		&__pulse {
+			width: 100px;
+			height: 100px;
+		}
+		&__btn {
+			width: 100px;
+			height: 100px;
+			background-size: cover;
+		}
+		&__text {
+			font-size: 12px;
+			left: 20px;
+			&::before {
+				width: 16px;
+				height: 68px;
+				top: 23px;
+				left: -25px;
+			}
+		}
+		&__author {
+			z-index: 1;
+			top: 170px;
+			left: 0px;
+			img {
+				max-width: 290px;
+			}
+		}
+	}
+}
