--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -163,6 +163,21 @@
 	}
 }
 
+
+
+@media (max-width: 1400px) {
+	.main {
+		padding-top: 100px;
+		padding-bottom: 150px;
+	}
+}
+@media (max-width: 1200px) {
+	.container {
+		max-width: 1100px;
+		padding: 0 20px;
+	}
+}
+
 @media (max-width: 1200px) {
 	.main {
 		padding-top: 150px;
@@ -208,6 +223,7 @@
 		background: url(../images/dest/main-bg-m.jpg) center no-repeat;
 		background-size: cover;
 		padding-bottom: 435px;
+		padding-top: 30px;
 	}
 	.description {
 		&__title {
