--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -21,6 +21,7 @@
 		font-size: 56px;
 		font-weight: 900;
 		line-height: 1.2;
+		text-transform: uppercase;
 		&::after {
 			content: "";
 			display: block;
@@ -152,6 +153,62 @@
 	}
 }
 
+//? Problem
+.problem {
+	background: url(../images/dest/problem-bg.jpg) center no-repeat;
+	background-size: cover;
+	padding: 100px 0;
+	.container {
+		display: flex;
+		justify-content: center;
+	}
+	&__content {
+		margin-left: 350px;
+	}
+
+	&__list {
+		padding: 0;
+		margin: 0;
+		list-style: none;
+		font-size: 21px;
+		font-weight: 700;
+		margin-top: 86px;
+	}
+
+	&__items {
+		margin: 20px 0;
+		display: flex;
+		align-items: center;
+		&::before {
+			content: "";
+			display: block;
+			width: 34px;
+			height: 3px;
+			background-color: $accent;
+			margin-right: 30px;
+		}
+	}
+}
+.heading {
+	&__title {
+		font-size: 42px;
+		text-transform: uppercase;
+		text-align: center;
+	}
+	&__title--left {
+		text-align: left;
+	}
+	&__title--accent {
+		color: $accent;
+	}
+
+	&__subtitle {
+		font-size: 28px;
+		font-weight: 700;
+	}
+}
+
+//? Анимация
 @keyframes border-pulse {
 	0% {
 		transform: scale(1);
@@ -163,8 +220,7 @@
 	}
 }
 
-
-
+//? Медиазапросы
 @media (max-width: 1400px) {
 	.main {
 		padding-top: 100px;
@@ -191,6 +247,28 @@
 			flex-direction: column;
 		}
 	}
+	.problem__list {
+		margin-top: 40px;
+	}
+	
+	.problem {
+		padding: 60px 0;
+		&__content {
+			margin-left: 300px;
+		}
+		.heading {
+			&__title {
+				font-size: 35px;
+			}
+			&__subtitle {
+				font-size: 20px;
+			}
+		}
+		&__items {
+			font-size: 16px;
+			margin: 14px 0;
+		}
+	}
 }
 
 @media (max-width: 992px) {
@@ -213,6 +291,27 @@
 	}
 	.btn--top {
 		margin-top: 20px;
+	}
+	.problem {
+		padding: 40px 0;
+		&__content {
+			margin-left: 220px;
+		}
+		.heading {
+			&__title {
+				font-size: 30px;
+			}
+			&__subtitle {
+				font-size: 18px;
+			}
+		}
+		&__items {
+			margin: 10px 0;
+			font-size: 14px;
+		}
+		&__list {
+			margin-top: 20px;
+		}
 	}
 }
 @media (max-width: 576px) {
@@ -275,4 +374,23 @@
 			}
 		}
 	}
+	.problem__content {
+		margin-left: 0;
+	}
+	.problem {
+		padding-top: 60px;
+		padding-bottom: 280px;
+		background: url(../images/dest/problem-bg-m.jpg) center no-repeat;
+		background-size: cover;
+		.heading__title {
+			text-align: center;
+		}
+		&__list {
+			margin-top: 60px;
+		}
+		&__items {
+			margin: 25px 0;
+		}
+	}
+
 }
