--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -126,6 +126,10 @@
 	text-transform: uppercase;
 	position: relative;
 	box-shadow: 0px 0px 9.75px 3.25px rgba(255, 197, 0, 0.65);
+	transition: all 0.1s;
+	&:hover {
+		box-shadow: $hover-shadow;
+	}
 	&--top {
 		margin-top: 60px;
 	}
@@ -224,7 +228,7 @@
 		background-color: #121212;
 		border-radius: 10px;
 		padding: 18px;
-		box-shadow: 0.813px 1.827px 46.15px 18.85px rgba(0, 0, 0, 0.004);
+		box-shadow: 1.813px 1.827px 37.15px 25.85px rgba(0, 0, 0, 1);
 	}
 	&__description {
 		padding: 60px 0 60px 125px;
@@ -270,6 +274,164 @@
 	}
 }
 
+// ? Benefits
+.benefits {
+	padding: 120px 0;
+	background: url(../images/dest/now2-bg.jpg) center no-repeat;
+	background-size: cover;
+	&__content {
+		margin-top: 65px;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		margin-bottom: 60px;
+	}
+
+	&__items {
+		display: flex;
+		align-items: center;
+		margin-bottom: 40px;
+	}
+
+	&__text {
+		margin: 0;
+		margin-left: 25px;
+	}
+
+	&__text--accent {
+		color: $accent;
+	}
+	.btn {
+		margin: 0 auto;
+	}
+}
+
+// ? Rate
+.rate {
+	padding: 120px 0;
+	background: url(../images/dest/rate-bg.png) center no-repeat;
+	background-size: cover;
+	.heading {
+		&__subtitle {
+			font-size: 44px;
+		}
+	}
+
+	&__content {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-top: 65px;
+		margin-bottom: 60px;
+	}
+	&__item {
+		padding: 23px;
+		background-color: #161616;
+		border-radius: 31px;
+		max-width: 360px;
+		width: 360px;
+		height: 440px;
+		text-align: center;
+	}
+	.btn {
+		margin: 0 auto;
+	}
+}
+.item {
+	&__wrapp {
+		border: 1px solid #6e5500;
+		border-radius: 31px;
+		padding: 21px;
+		padding-top: 65px;
+		height: 397px;
+	}
+
+	&__title {
+		color: $accent;
+		font-size: 21px;
+		font-weight: 900;
+		margin-bottom: 54px;
+		height: 46px;
+	}
+
+	&__subtitle {
+		font-size: 20px;
+		font-weight: 700;
+	}
+}
+
+// ? Form
+.form {
+	position: relative;
+	padding: 120px 0;
+	background: url(../images/dest/form-bg.png) center no-repeat;
+	background-size: cover;
+	&__content {
+		margin-top: 70px;
+		background-color: rgb(18, 18, 18);
+		box-shadow: 1.813px 1.827px 37.15px 25.85px rgba(0, 0, 0, 1);
+		max-width: 573px;
+		border-radius: 10px;
+		padding: 34px 26px;
+		position: relative;
+	}
+	&__wrap {
+		border: 1px solid #6e5500;
+		border-radius: 10px;
+		padding: 40px 30px;
+	}
+	&__label {
+		color: $accent;
+		font-weight: 700;
+	}
+	&__input {
+		width: 100%;
+		border: none;
+		padding: 20px;
+		padding-left: 23px;
+		border-radius: 10px;
+		margin-bottom: 30px;
+	}
+	&__btn {
+		width: 100%;
+		border: none;
+	}
+	&__author {
+		position: absolute;
+		left: 41%;
+		bottom: 0;
+		z-index: 0;
+	}
+}
+
+// ? Reviews
+.reviews {
+	padding: 120px;
+	background: url(../images/dest/reviews-bg.png) center no-repeat;
+	background-size: cover;
+	&__content {
+		text-align: center;
+		margin-top: 60px;
+	}
+
+	&__item {
+	}
+}
+.container {
+}
+.heading {
+
+	&__title {
+	}
+
+	&__title--accent {
+	}
+
+	&__subtitle {
+	}
+}
+
+
 //? Анимация
 @keyframes border-pulse {
 	0% {
@@ -299,9 +461,6 @@
 		max-width: 1100px;
 		padding: 0 20px;
 	}
-}
-
-@media (max-width: 1200px) {
 	.main {
 		padding-top: 150px;
 		padding-bottom: 150px;
@@ -351,8 +510,16 @@
 			font-size: 20px;
 		}
 	}
+	.rate {
+		&__content {
+			flex-wrap: wrap;
+			justify-content: center;
+		}
+		&__item {
+			margin: 20px;
+		}
+	}
 }
-
 @media (max-width: 992px) {
 	.main {
 		padding-bottom: 750px;
@@ -422,6 +589,36 @@
 			font-size: 18px;
 		}
 	}
+	.benefits {
+		padding-top: 40px;
+	}
+	.rate {
+		&__content {
+			margin: 30px 0;
+		}
+		padding: 40px 0;
+		.heading {
+			&__subtitle {
+				font-size: 30px;
+			}
+		}
+		&__item {
+			margin: 20px 0;
+			padding: 20px;
+		}
+		.item__title {
+			height: 10px;
+		}
+		.item__subtitle {
+			font-size: 16px;
+		}
+		.item__desc {
+			font-size: 14px;
+		}
+	}
+	.form {
+		padding: 40px 0;
+	}
 }
 @media (max-width: 768px) {
 	.now__content {
@@ -431,10 +628,27 @@
 		padding: 30px;
 		padding-top: 60px;
 	}
+	.benefits {
+		&__content {
+			flex-wrap: wrap;
+			margin-bottom: 0px;
+		}
+	}
+	.form {
+		background: url(../images/dest/form-bg-m.png) center 50px no-repeat;
+		background-size: cover;
+		overflow: hidden;
+		padding-bottom: 350px;
+		&__author {
+			left: auto;
+			width: 100%;
+			bottom: -15%;
+		}
+	}
 }
 @media (max-width: 576px) {
 	.container {
-		padding: 0 10px;
+		padding: 0;
 	}
 	.main {
 		background: url(../images/dest/main-bg-m.jpg) center no-repeat;
@@ -516,8 +730,8 @@
 	}
 	.now__description {
 		padding: 18px;
-		padding-top: 40px;
-		font-size: 14px;
+		padding-top: 50px;
+		font-size: 11px;
 		&::before {
 			top: -29%;
 			width: 134px;
@@ -530,5 +744,31 @@
 	}
 	.now .btn--now {
 		margin-top: 20px;
+	}
+	.benefits {
+		background: url(../images/dest/now2-bg-m.jpg) center no-repeat;
+		background-size: cover;
+	}
+	.form {
+		padding-bottom: 200px;
+		&__content {
+			padding: 18px;
+		}
+		&__wrap {
+			padding: 40px 20px;
+		}
+		&__label {
+			font-size: 14px;
+		}
+		&__input {
+			margin-bottom: 20px;
+			padding: 15px;
+		}
+		&__btn {
+			padding: 15px;
+		}
+		&__author {
+			bottom: -10%;
+		}
 	}
 }
