Правки согласно TODO 1.0

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -295,6 +295,9 @@
 		font-weight: 700;
 		line-height: 1.7;
 		position: relative;
+		span {
+			display: block;
+		}
 		&::before {
 			content: "";
 			display: block;
