--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,7 +1,14 @@
 @import "config";
 
-// ? Main BLOCK
 
+a {
+	color: $textcolor;
+	cursor: pointer;
+	&:hover {
+		text-decoration: none;
+		color: $accent;
+	}
+}
 // ? Header
 .header {
 	background-color: rgba($accent, 1);
@@ -57,12 +64,12 @@
 		}
 	}
 }
-
+// ? Main BLOCK
 .main {
 	background: url(../images/dest/main-bg.jpg) center no-repeat;
 	background-size: cover;
 	padding-top: 235px;
-	padding-bottom: 200px;
+	padding-bottom: 120px;
 	overflow: hidden;
 	&__content {
 		display: flex;
@@ -146,7 +153,7 @@
 	}
 	&__author {
 		position: absolute;
-		top: -120px;
+		top: -290px;
 		left: -350px;
 	}
 	&__text {
@@ -242,7 +249,7 @@
 		&::before {
 			content: "";
 			display: block;
-			width: 34px;
+			min-width: 34px;
 			height: 3px;
 			background-color: $accent;
 			margin-right: 30px;
@@ -340,9 +347,6 @@
 	background-size: cover;
 	&__content {
 		margin-top: 65px;
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
 		margin-bottom: 60px;
 	}
 
@@ -571,7 +575,7 @@
 				a {
 					font-size: 18px;
 					font-weight: 700;
-					color: $accent;
+					color: $textcolor;
 					&:hover {
 						text-decoration: none;
 					}
@@ -642,16 +646,12 @@
 			padding: 0;
 		}
 		.requisites ul li {
-			cursor: pointer;
 			margin-bottom: 20px;
 			display: flex;
 			align-items: center;
 		}
 		.requisites ul li img {
 			margin-right: 15px;
-		}
-		.requisites ul li:hover {
-			color: $accent;
 		}
 		.requisites ul li a {
 			color: #fff;
