--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -99,6 +99,8 @@ a {
 		font-size: 36px;
 		margin-top: 30px;
 		line-height: 1;
+		width: 350px;
+		height: 45px;
 	}
 }
 .included {
@@ -154,7 +156,7 @@ a {
 	&__author {
 		position: absolute;
 		top: -290px;
-		left: -350px;
+		left: -250px;
 	}
 	&__text {
 		font-size: 14px;
@@ -393,16 +395,53 @@ a {
 		border-radius: 31px;
 		max-width: 360px;
 		width: 360px;
-		height: 470px;
+		height: 480px;
 		text-align: center;
 		transition: all 0.2s;
 		.item__price {
-			display: block;
-			margin-top: 10px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-wrap: wrap;
+			position: absolute;
+			width: 100%;
+			bottom: 15px;
+			left: 50%;
+			transform:translateX(-50%);
+			&--width {
+				width: 200px;
+				justify-content: start;
+			}
+			.price__wrapp {
+				display: flex;
+			}
+			&--margin {
+				margin-left: 11px;
+			}
 			&--accent {
 				color: $accent;
 				font-weight: 700;
-				font-size: 20px;
+				font-size: 16px;
+			}
+			.discount {
+				margin-left: 20px;
+				display: flex;
+				flex-direction: column;
+				&__sale {
+					opacity: 0.5;
+					font-size: 12px;
+					position: relative;
+					&::after {
+						content: '';
+						display: block;
+						width: 100%;
+						height: 1px;
+						background-color: #ffffff;
+						position: absolute;
+						top: 50%;
+						transform: translateY(-50%);
+					}
+				}
 			}
 		}
 		&:hover {
@@ -416,11 +455,12 @@ a {
 }
 .item {
 	&__wrapp {
+		position: relative;
 		border: 1px solid #6e5500;
 		border-radius: 31px;
 		padding: 21px;
 		padding-top: 40px;
-		height: 427px;
+		height: 437px;
 	}
 
 	&__title {
@@ -469,6 +509,22 @@ a {
 		padding-left: 23px;
 		border-radius: 10px;
 		margin-bottom: 30px;
+		outline: none;
+	}
+	&__personal {
+		display: flex;
+		align-items: flex-end;
+		margin-bottom: 40px;
+		line-height: 1;
+		label {
+			font-size: 12px;
+			margin: 0;
+			margin-left: 10px;
+			a {
+				color: $accent;
+				text-decoration: underline;
+			}
+		}
 	}
 	&__btn {
 		width: 100%;
@@ -743,7 +799,7 @@ a {
 		margin-bottom: 20px;
 	}
 }
-#politic {
+#politic, #personal {
 	overflow-y: scroll;
 	.modals {
 		top: 0;
@@ -751,6 +807,10 @@ a {
 		p {
 			font-size: 14px;
 		}
+	}
+	.close2 {
+		color: $accent;
+		font-weight: 700;
 	}
 }
 
@@ -825,8 +885,15 @@ a {
 //? Медиазапросы
 @media (max-width: 1400px) {
 	.main {
-		padding-top: 170px;
-		padding-bottom: 150px;
+		padding-top: 90px;
+		padding-bottom: 60px;
+		.play__author {
+			top: -170px;
+			left: -295px;
+			img {
+				max-width: 700px;
+			}
+		}
 	}
 	.now__description::after {
 		width: 431px;
@@ -859,8 +926,8 @@ a {
 		width: 63%;
 	}
 	.main {
-		padding-top: 220px;
-		padding-bottom: 150px;
+		padding-top: 90px;
+		padding-bottom: 60px;
 		&__content {
 			display: flex;
 			flex-direction: column;
@@ -871,8 +938,11 @@ a {
 				right: 0;
 				bottom: 0;
 				&__author {
-					top: -370px;
-					left: -350px;
+					top: -420px;
+					left: -475px;
+					img {
+						max-width: 800px;
+					}
 				}
 			}
 		}
@@ -1033,8 +1103,7 @@ a {
 		}
 	}
 	.main {
-		padding-bottom: 100px;
-		padding-top: 150px;
+		padding-top: 100px;
 		position: relative;
 		&__content {
 			position: static;
@@ -1043,10 +1112,10 @@ a {
 				left: 59%;
 				right: auto;
 				&__author {
-					top: -55px;
+					top: -260px;
 					left: -149px;
 					img {
-						width: 600px;
+						// width: 600px;
 					}
 			  }
 			}
@@ -1194,7 +1263,20 @@ a {
 }
 @media (max-width: 768px) {
 	.main {
-		padding-bottom: 200px;
+		padding-bottom: 500px;
+		.main__content .play {
+			left: 50%;
+			right: auto;
+			transform: translateX(-50%);
+	  }
+		.play__author {
+			z-index: 1;
+			top: 20px!important;
+			left: -180px!important;
+			img {
+				max-width: 600px!important;
+			}
+		}
 	}
 	.now__content {
 		width: 500px;
@@ -1292,33 +1374,11 @@ a {
 	.main {
 		background: url(../images/dest/main-bg-m.jpg) center no-repeat;
 		background-size: cover;
-		padding-bottom: 215px;
+		padding-bottom: 300px;
 		padding-top:45px;
-	}
-	.description {
-		&__title {
-			font-size: 30px;
-			&::after {
-				display: none;
-			}
-		}
-		&__subtitle {
-			font-size: 16px;
-			margin-top: 5px;
-		}
-		.included {
-			margin-top: 10px;
-			&__item {
-				font-size: 14px;
-			}
-			&__item::before {
-				width: 35px;
-				height: 35px;
-			}
-		}
-	}
+		&__content {
+			
 	.play {
-		bottom: 20% !important;
 		&__wrapp {
 			width: 100px;
 			height: 100px;
@@ -1344,10 +1404,34 @@ a {
 		}
 		&__author {
 			z-index: 1;
-			top: 0!important;
-			left: -175px !important;
+			top: 20px!important;
+			left: -149px !important;
 			img {
-				max-width: 300px;
+				max-width: 400px !important;
+			}
+		}
+	}
+		}
+	}
+	.description {
+		&__title {
+			font-size: 30px;
+			&::after {
+				display: none;
+			}
+		}
+		&__subtitle {
+			font-size: 16px;
+			margin-top: 5px;
+		}
+		.included {
+			margin-top: 10px;
+			&__item {
+				font-size: 14px;
+			}
+			&__item::before {
+				width: 35px;
+				height: 35px;
 			}
 		}
 	}
