--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -224,7 +224,7 @@ a {
 
 //? Problem
 .problem {
-	background: url(../images/dest/problem-bg.jpg) center no-repeat;
+	background: url(../images/dest/problem-bg.png) center no-repeat;
 	background-size: cover;
 	padding: 100px 0;
 	.container {
@@ -345,7 +345,7 @@ a {
 // ? Benefits
 .benefits {
 	padding: 120px 0;
-	background: url(../images/dest/now2-bg.jpg) center no-repeat;
+	background: url(../images/dest/now2-bg.png) center no-repeat;
 	background-size: cover;
 	&__content {
 		margin-top: 65px;
@@ -610,7 +610,7 @@ a {
 // ? FAQ
 .faq {
 	padding: 120px 0;
-	background: url(../images/dest/faq-bg.jpg) center no-repeat;
+	background: url(../images/dest/faq-bg.png) center no-repeat;
 	background-size: cover;
 	.accordion {
 		margin-top: 40px;
@@ -1291,7 +1291,7 @@ a {
 	.problem {
 		padding-top: 60px;
 		padding-bottom: 280px;
-		background: url(../images/dest/problem-bg-m.jpg) center no-repeat;
+		background: url(../images/dest/problem-bg-m.png) center no-repeat;
 		background-size: cover;
 		.heading__title {
 			text-align: center;
