--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -71,6 +71,9 @@ a {
 	padding-top: 235px;
 	padding-bottom: 120px;
 	overflow: hidden;
+	.container {
+		max-width: 1240px;
+	}
 	&__content {
 		display: flex;
 		justify-content: space-between;
@@ -99,14 +102,12 @@ a {
 		font-size: 36px;
 		margin-top: 30px;
 		line-height: 1;
-		width: 350px;
-		height: 45px;
 	}
 }
 .included {
 	display: flex;
 	justify-content: space-between;
-	margin-top: 60px;
+	margin-top: 40px;
 	&__list {
 		list-style: none;
 		padding: 0;
@@ -156,7 +157,7 @@ a {
 	&__author {
 		position: absolute;
 		top: -290px;
-		left: -250px;
+		left: -390px;
 	}
 	&__text {
 		font-size: 14px;
@@ -283,8 +284,8 @@ a {
 
 // ? Now
 .now {
-	padding-top: 120px;
-	padding-bottom: 160px;
+	padding-top: 80px;
+	padding-bottom: 60px;
 	background: url(../images/dest/now-bg.jpg) center no-repeat;
 	background-size: cover;
 	&__content {
@@ -481,6 +482,7 @@ a {
 .form {
 	position: relative;
 	padding: 120px 0;
+	padding-top: 0;
 	background: url(../images/dest/form-bg.png) center no-repeat;
 	background-size: cover;
 	overflow: hidden;
@@ -885,14 +887,26 @@ a {
 //? Медиазапросы
 @media (max-width: 1400px) {
 	.main {
+		padding-bottom: 50px !important;
+		.container {
+			max-width: 1140px;
+		}
+		padding-left: 40px;
+		padding-right: 40px;
 		padding-top: 90px;
 		padding-bottom: 60px;
+		.description__subtitle {
+			font-size: 30px;
+		}
 		.play__author {
-			top: -170px;
-			left: -295px;
+			top: -145px;
+			left: -450px;
 			img {
 				max-width: 700px;
 			}
+		}
+		.included {
+			flex-direction: column;
 		}
 	}
 	.now__description::after {
@@ -923,9 +937,10 @@ a {
 		padding: 0 20px;
 	}
 	.header__wrap .nav {
-		width: 63%;
+		width: 73%;
 	}
 	.main {
+		padding: 0;
 		padding-top: 90px;
 		padding-bottom: 60px;
 		&__content {
@@ -938,10 +953,10 @@ a {
 				right: 0;
 				bottom: 0;
 				&__author {
-					top: -420px;
-					left: -475px;
+					top: -300px;
+					left: -310px;
 					img {
-						max-width: 800px;
+						max-width: 650px;
 					}
 				}
 			}
@@ -1112,10 +1127,10 @@ a {
 				left: 59%;
 				right: auto;
 				&__author {
-					top: -260px;
-					left: -149px;
+					top: 0px;
+					left: -165px;
 					img {
-						// width: 600px;
+						width: 600px;
 					}
 			  }
 			}
@@ -1263,7 +1278,7 @@ a {
 }
 @media (max-width: 768px) {
 	.main {
-		padding-bottom: 500px;
+		padding-bottom: 500px !important;
 		.main__content .play {
 			left: 50%;
 			right: auto;
@@ -1374,7 +1389,7 @@ a {
 	.main {
 		background: url(../images/dest/main-bg-m.jpg) center no-repeat;
 		background-size: cover;
-		padding-bottom: 300px;
+		padding-bottom: 300px !important;
 		padding-top:45px;
 		&__content {
 			
@@ -1421,7 +1436,7 @@ a {
 			}
 		}
 		&__subtitle {
-			font-size: 16px;
+			font-size: 14px !important;
 			margin-top: 5px;
 		}
 		.included {
